--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ filelock==3.18.0
 idna==3.10
 pillow==11.3.0
 platformdirs==4.3.8
+python-decouple==3.8
 requests==2.32.4
 sqlparse==0.5.3
 stripe==12.4.0
