--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,13 @@
-asgiref==3.8.1
-certifi==2025.7.14
+asgiref==3.9.1
+certifi==2025.8.3
 charset-normalizer==3.4.2
-distlib==0.3.9
-Django==5.2.3
-filelock==3.18.0
+Django==5.2.4
 idna==3.10
 pillow==11.3.0
-platformdirs==4.3.8
-python-decouple==3.8
+python-dotenv==1.1.1
 requests==2.32.4
 sqlparse==0.5.3
 stripe==12.4.0
 typing_extensions==4.14.1
 tzdata==2025.2
 urllib3==2.5.0
-virtualenv==20.31.2
-virtualenvwrapper-win==1.2.7
